// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/process/sort sortBranches() sorts based on prPriority 1`] = `
Array [
  Object {
    "prPriority": 1,
    "prTitle": "some major update",
    "updateTypes": Array [
      "major",
    ],
  },
  Object {
    "prPriority": 0,
    "prTitle": "some other pin",
    "updateTypes": Array [
      "pin",
    ],
  },
  Object {
    "prPriority": -1,
    "prTitle": "some pin",
    "updateTypes": Array [
      "pin",
    ],
  },
  Object {
    "prPriority": -1,
    "prTitle": "a minor update",
    "updateTypes": Array [
      "minor",
    ],
  },
]
`;

exports[`workers/repository/process/sort sortBranches() sorts based on updateType and prTitle 1`] = `
Array [
  Object {
    "prTitle": "some other pin",
    "updateTypes": Array [
      "pin",
    ],
  },
  Object {
    "prTitle": "some pin",
    "updateTypes": Array [
      "pin",
    ],
  },
  Object {
    "prTitle": "a minor update",
    "updateTypes": Array [
      "minor",
    ],
  },
  Object {
    "prTitle": "some major update",
    "updateTypes": Array [
      "major",
    ],
  },
]
`;
